2016-03-28  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2897: clean-cacao removes extracted source tree
	but not extract-cacao.stamp
	* Makefile.am,
	(clean-extract-cacao): Remove the entire
	CACAO tree here.
	(cacao-configure): Build in a separate directory,
	cacao.build.
	(cacao-build): Likewise.
	(cacao-install): Likewise.
	(clean-cacao): Only remove the installation and
	build directories, leaving the clean source tree
	intact.
	* NEWS: Updated.

2016-03-28  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2352: Split JamVM rule into configure, make and
	make install stages
	* Makefile.am:
	(jamvm): Depend on jamvm-configure, jamvm-build and
	jamvm-install rather than doing the job itself.
	(jamvm-configure): Split from jamvm step. Configures
	the JamVM build.
	(jamvm-build): Split from jamvm step and update
	the make invocation to match that used by CACAO.
	Builds JamVM.
	(jamvm-install): Likewise. Installs JamVM and
	creates the JamVM symlinks needed by the OpenJDK
	build.
	(clean-jamvm): Delete the intermediate stamps
	from the jamvm-configure, jamvm-build and jamvm-install
	steps.
	* NEWS: Updated.

2016-03-28  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2351: Split CACAO rule into configure and make stages
	* Makefile.am:
	(cacao): Depend on cacao-configure, cacao-build and
	cacao-install rather than doing the job itself.
	(cacao-configure): Split from cacao step. Configures
	the CACAO build.
	(cacao-build): Likewise. Builds CACAO.
	(cacao-install): Likewise. Installs CACAO and creates
	the CACAO symlinks needed by the OpenJDK build.
	(clean-cacao): Delete the intermediate stamps
	from the cacao-configure, cacao-build and cacao-install
	steps.
	* NEWS: Updated.

2016-03-28  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2873: Fix make distcheck
	* Makefile.am:
	(clean-download-langtools): Correct typo, deleting
	download-openjdk.stamp instead of download-langtools.stamp
	(clean-extract-openjdk): Also depend on clean-extract-nashorn.